changes to HTML comments and CSS styling of buttons adjusted git add . git commit -m changes to HTML comments and CSS styling of buttons adjusted

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,11 +42,7 @@ p {
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
-/*Rock {
+#Rock {
     margin-left: 45%;
 }
-*/
-button img {
-    height: 200px;
-    border-radius: 100%;
-}
+
