--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ p {
 
 .container {
     width: 80%;
-    height: 300px;
+    height: 350px;
     margin-left: 10%;
     text-align: center;
     background-color: rgb(155, 152, 152);
@@ -41,6 +41,14 @@ p {
     color: green;
     padding-top: 5rem;
     padding-bottom: 5rem;
+}
+
+input {
+    padding: 10px;
+}
+
+.scoreboard {
+    font-size: xx-large;
 }
 
 
