--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 /* generic styling */
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', Open-Sans;
 }
 
 body {
@@ -157,3 +160,22 @@ a {
     padding-top: 10px;
 }
 
+@media only screen and (min-width: 375px) {
+    .gamerules {
+        padding-top: 25px;
+    }
+
+    .container {
+        margin-top: 50px;
+    }
+}
+
+@media only screen and (min-width: 414px) {
+    .gamerules {
+        padding-top: 45px;
+    }
+
+    .container {
+        margin-top: 50px;
+    }
+}
