--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ span {
 }
 
 img {
-    width: 100px;
+    width: 80px;
 }
 
 .rule {
@@ -51,18 +51,25 @@ img {
     margin: 0 20px;
 }
 
-.startplay {
+.startbtn {
     cursor: pointer;
     border: 1px solid black;
     border-radius: 20px;
     font-size: 20px;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 5%;
+    margin-bottom: 5%;
     background: linear-gradient(to bottom, brown 5%, rgb(223, 120, 120) 100%);   
 }
-
+/*
 .startbtn {
-    font-size: 20px;
-    text-decoration: none;
-    padding: 15px;
+  
+
+
     float: none;
     text-align: center;
 }
