--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ img {
 
 .text {
     margin: 0 20px;
-    color: green;
+    color: gold;
 }
 
 .startbtn a {
@@ -137,7 +137,7 @@ a {
 
 .rock {
     transition: 100ms;
-    margin: 35px;
+    margin: 10px;
 }
 
 .rock:hover {
@@ -146,7 +146,7 @@ a {
 
 .scissors {
     transition: 100ms;
-    margin: 35px;
+    margin: 15px;
 }
 
 .scissors:hover {
@@ -155,7 +155,7 @@ a {
 
 .paper {
     transition: 100ms;
-    margin: 35px;
+    margin: 10px;
 }
 
 .paper:hover {
@@ -171,6 +171,7 @@ a {
 .playerdisplay {
     margin: 20px;
     font-size: 15px;
+    color: white;
 }
 
 .btn {
@@ -189,9 +190,9 @@ a {
 }
 
 .playersText {
-    font-size: x-large;
     margin: 13px;
     padding-top: 10px;
+    color: white;
 }
 
 @media only screen and (min-width: 320px) {
