--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,6 @@ h4 {
     width: 95%;
     margin-left: 2.5%;
     padding: 2px;
-    border-radius: 15%;
 }
 
 .rulestext1{
@@ -140,7 +139,6 @@ a {
 
 .rock {
     transition: 100ms;
-    margin: 10px;
 }
 
 .rock:hover {
@@ -242,7 +240,9 @@ label {
         font-size: 13px;
     }
 
-    
+    .btn {
+        padding-bottom: 24px;
+    }
 
 }
 
@@ -282,9 +282,58 @@ label {
         font-size: 20px;
     }
 
+    img {
+        width: 125px;
+    }
+
 /* game page */
     .btn {
         margin-top: 20px;
+    }
+
+}
+
+@media only screen and (min-width: 1024px) {
+/* home page */
+    .gamerules {
+        padding-top: 75px;
+    }
+
+    .rulestext2 {
+        font-size: 25px;
+    }
+
+    .rule {
+        padding-top: 50px;
+    }
+
+    .rulestext1 {
+        font-size: 25px;
+    }
+
+    img {
+        width: 100px;
+    }
+
+/* game page */
+    .playersText {
+        font-size: 30px;
+    }
+
+    .selectionimgs {
+        padding-top: 100px;
+    }
+
+    .rock {
+        margin: 50px;
+    }
+
+    .scissors {
+        margin: 50px;
+    }
+
+    .paper {
+        margin: 50px;
     }
 
 }
