--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,31 +190,36 @@ a {
     padding: 5px;
 }
 
-.feedbackpage {
-    margin-top: 10px;
-    cursor: pointer;
-    border: 1px solid black;
-    border-radius: 20px;
-    font-size: 20px;
-    background: linear-gradient(to bottom, brown 5%, rgb(223, 120, 120) 100%);   
-    color: white;
-    padding: 5px;
+/* model pop-ups styling */
+
+.modal-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 200px;
+    right: 360px;
+    height: 50vh;
+    width: 50vw;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
 }
 
-.feedbackpage a {
-    text-decoration: none;
-    color: white;
+.modal-box.show {
+    pointer-events:auto;
+    opacity: 1;
 }
 
-h2 {
-    color: white;
+.modal {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    width: 600px;
+    max-width: 100%;
+    padding: 30px 50px;
     text-align: center;
 }
-
-label {
-    color: white;
-}
-
 
 @media only screen and (min-width: 320px) {
 /* index page */
