--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,27 +89,24 @@ a {
 
 /* game page styling */
 
-.btn a {
-    margin-top: 10px;
+.rtnhpage {
     cursor: pointer;
     border: 1px solid black;
     border-radius: 20px;
     font-size: 20px;
     background: linear-gradient(to bottom, brown 5%, rgb(223, 120, 120) 100%);
-    padding: 6px; 
-}
-
-.rtnhpage {
     text-decoration: none;
     color: white;
-    transition: 0.85s;
+    padding: 5px;
 }
 
-
+.rtnhpage:active {
+    transform: scale(0.85);
+}
 
 .container {
     width: 90%;
-    height: 11rem;
+    height: 10rem;
     margin-left: 5%;
     margin-top: 20px;
     text-align: center;
@@ -172,6 +169,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 20px;
 }
 
 .playerdisplay {
@@ -193,6 +191,10 @@ a {
     background: linear-gradient(to bottom, brown 5%, rgb(223, 120, 120) 100%);   
     color: white;
     padding: 5px;
+}
+
+.startagain:active {
+    transform: scale(0.90);
 }
 
 @media only screen and (min-width: 320px) {
@@ -256,13 +258,16 @@ a {
     .modal {
         background-color: #c7d4d9;
         border-radius: 5px;
-        padding: 20px 5px;
+        width: 100%;
+        height: 165px;
         text-align: center;
 
     }
     .modal h1 {
         color: darkblue;
-        font-size: 18px;
+        font-size: 25px;
+        padding-top: 25px;
+        padding-bottom: 65px;
     }
     .modal p {
         padding: 20px;
@@ -282,8 +287,7 @@ a {
         box-shadow: 1px 2px 2px;
         border: solid darkred;
         font-size: 15px;
-        margin: 0 6px 0 -5px;
-        padding: 4px;
+        padding: 5px;
     }
     #hpage a {
         color: darkred;
@@ -296,7 +300,7 @@ a {
         color: darkgreen;
         box-shadow: 1px 2px 2px;
         font-size: 15px;
-        padding: 4px;
+        padding: 5px;
     }
     #staypage a {
         color: darkred;
